--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
 body {
 	background-color: #E0E0E0;
+	display: flex;
+	flex-direction: column;
+}
+
+.title {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
 }
