--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,7 @@ body {
 	border: 5px dashed #1010A2;
 	border-radius: 10px;
 	padding: 5px 0px;
-	margin: 10px 0px;
-	margin-bottom: 20px;
+	margin: 10px 0px 20px 0px;
 }
 
 a {
