--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,12 @@ body {
 .row {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: space-around;
 	border: 5px dashed #1010A2;
 	border-radius: 10px;
-	padding: 5px 0px;
-	margin: 10px 0px 20px 0px;
+	padding: 5px 0px 0px;
+	margin: 10px 0px 20px;
 }
 
 a {
@@ -36,6 +37,7 @@ a {
 	color: white;
 	background-color: #FF5566;
 	padding: 10px;
+	margin: 0px 10px 5px;
 }
 
 a:hover {
